--- a/action.yml
+++ b/action.yml
@@ -24,17 +24,21 @@ runs:
         # Get the GitHub Actions JWT token
         jwt_response=$(curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
           "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=${{ inputs.endpoint }}")
+        echo "sent request to $ACTIONS_ID_TOKEN_REQUEST_URL"
 
         # Extract the JWT token from the response
         jwt_token=$(echo "$jwt_response" | jq -r '.value')
+        echo "retrieved jwt"
 
         # Send the request to the endpoint with JWT in payload
         token_response=$(curl -X PUT ${{ inputs.endpoint }}/api/v1/trusted_publishing/tokens \
           -H "Content-Type: application/json" \
           -d "{\"jwt\": \"$jwt_token\"}")
+        echo "sent request to ${{ inputs.endpoint }}/api/v1/trusted_publishing/tokens"
 
         # Extract the token from the JSON response `{ "token": "string" }`.
         token=$(echo "$token_response" | jq -r '.token')
+        echo "retrieved token"
 
         # Store the token in GitHub Actions output
         echo "token=$token" >> $GITHUB_OUTPUT
