--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,7 @@ runs:
       shell: bash
       run: |
         # Get the GitHub Actions JWT token
+        echo "Retrieving GitHub Actions JWT token from $ACTIONS_ID_TOKEN_REQUEST_URL"
         jwt_response=$(curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
           "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=${{ inputs.endpoint }}")
         echo "sent request to $ACTIONS_ID_TOKEN_REQUEST_URL"
