--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,10 @@ on:
     paths-ignore:
       - "**.md"
 
+# Required for OpenID Connect token retrieval
+permissions:
+  id-token: write
+
 jobs:
   test:
     runs-on: ubuntu-24.04
