--- a/action.yml
+++ b/action.yml
@@ -22,5 +22,6 @@ runs:
       shell: bash
       env:
         REGISTRY_URL: ${{ inputs.url }}
+        GITHUB_ACTION_PATH: ${{ github.action_path }}
       run: |
-        "${{ github.action_path }}/script.sh"
+        "$GITHUB_ACTION_PATH/script.sh"
