--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,6 @@ jobs:
 
   zizmor:
     runs-on: ubuntu-24.04
-    permissions:
-      security-events: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -40,6 +38,9 @@ jobs:
         uses: zizmorcore/zizmor-action@f52a838cfabf134edcbaa7c8b3677dde20045018 # v0.1.1
         with:
           persona: pedantic
+          # Don't use GitHub advanced security.
+          # Instead, fail if there's a security issue.
+          advanced-security: false
 
   test:
     runs-on: ubuntu-24.04
