--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 permissions: {}
 
 jobs:
-  ci:
+  check:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
@@ -21,7 +21,7 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Shellcheck
+      - name: Check
         run: |
           # Check format and lint
           npm run check
