--- a/action.yml
+++ b/action.yml
@@ -16,5 +16,5 @@ branding:
   color: "yellow"
 runs:
   using: "node20"
-  main: "src/main.js"
-  post: "src/post.js"
+  main: "dist/main.js"
+  post: "dist/post.js"
