--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     },
     "homepage": "https://github.com/marcoieni/trusted-publishing-action-draft#readme",
     "devDependencies": {
-        "rollup": "^4.41.1",
+        "rollup": "4.43.0",
+        "@rollup/plugin-commonjs": "^28.0.3",
+        "@rollup/plugin-node-resolve": "^16.0.1",
         "@biomejs/biome": "1.9.4"
-
     }
 }
