--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
 permissions: {}
 
 jobs:
-  ci:
+  check:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
@@ -21,10 +21,10 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Shellcheck
+      - name: Check
         run: |
-          # Run shellcheck on the action script
-          shellcheck "script.sh" --shell=dash
+          # Check format and lint
+          npm run check
 
   zizmor:
     runs-on: ubuntu-24.04
