--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,9 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Install node dependencies
+        run: npm ci
+
       - name: Check is packaged
         run: |
           # Compile to single js files
