--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "Get a temporary access token that you can use to interact with crates.io.",
     "private": true,
     "scripts": {
-        "package": "npx rollup --config rollup.config.js",
-        "check": "npx @biomejs/biome check"
+        "package": "npx rollup --config rollup.config.js"
     },
     "engines": {
         "node": ">=20"
@@ -27,6 +26,7 @@
         "rollup": "4.43.0",
         "@rollup/plugin-commonjs": "^28.0.3",
         "@rollup/plugin-node-resolve": "^16.0.1",
+        "prettier": "3.5.3",
         "@biomejs/biome": "1.9.4"
     }
 }
