--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
     },
     "homepage": "https://github.com/marcoieni/trusted-publishing-action-draft#readme",
     "devDependencies": {
-        "rollup": "^4.43.0",
+        "@biomejs/biome": "^1.9.4",
+        "@eslint/js": "^9.28.0",
+        "@eslint/markdown": "^6.5.0",
         "@rollup/plugin-commonjs": "^28.0.3",
         "@rollup/plugin-node-resolve": "^16.0.1",
         "@rollup/plugin-typescript": "^12.1.2",
-        "prettier": "^3.5.3",
-        "typescript": "^5.8.3",
         "@types/node": "^20",
+        "eslint": "^9.28.0",
+        "globals": "^16.2.0",
+        "prettier": "^3.5.3",
+        "rollup": "^4.43.0",
         "tslib": "^2.8.1",
-        "@biomejs/biome": "^1.9.4"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.34.0"
     }
 }
