--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,20 +1,16 @@
-name: CI
+name: Format
 
 on:
   workflow_dispatch:
   push:
     branches:
       - "main"
-    paths-ignore:
-      - "**.md"
   pull_request:
-    paths-ignore:
-      - "**.md"
 
 permissions: {}
 
 jobs:
-  markdown:
+  format:
     runs-on: ubuntu-24.04
     steps:
       - name: Checkout repository
@@ -25,5 +21,5 @@ jobs:
       - name: Install Prettier
         run: npm ci
 
-      - name: Check markdown
-        run: npx prettier --check '**/*.md'
+      - name: Format
+        run: npx prettier --check .
