--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Get a temporary access token that you can use to interact with crates.io.",
     "private": true,
     "scripts": {
-        "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript"
+        "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+        "format": "npx prettier --write .",
+        "lint": "npx eslint src"
     },
     "engines": {
         "node": ">=20"
@@ -23,14 +25,15 @@
     },
     "homepage": "https://github.com/marcoieni/trusted-publishing-action-draft#readme",
     "devDependencies": {
-        "rollup": "^4.43.0",
         "@rollup/plugin-commonjs": "^28.0.3",
         "@rollup/plugin-node-resolve": "^16.0.1",
         "@rollup/plugin-typescript": "^12.1.2",
-        "prettier": "^3.5.3",
-        "typescript": "^5.8.3",
         "@types/node": "^20",
+        "eslint": "^9.28.0",
+        "prettier": "^3.5.3",
+        "rollup": "^4.43.0",
         "tslib": "^2.8.1",
-        "@biomejs/biome": "^1.9.4"
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.34.0"
     }
 }
