--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
         "format": "npx prettier --write .",
-        "lint": "npx eslint src"
+        "lint": "npx eslint"
     },
     "engines": {
         "node": ">=20"
