--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
         "format": "npx prettier --write .",
-        "lint": "npx eslint"
+        "lint": "npx eslint",
+        "test": "node --experimental-vm-modules node_modules/.bin/jest"
     },
     "engines": {
         "node": ">=20"
@@ -32,6 +33,7 @@
         "eslint": "^9.28.0",
         "prettier": "^3.5.3",
         "rollup": "^4.43.0",
+        "ts-jest": "^29.4.0",
         "tslib": "^2.8.1",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.34.0"
