--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "compilerOptions": {
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "isolatedModules": true
     },
     "exclude": ["dist", "node_modules"],
     "include": ["src"]
