--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,21 @@ on:
 permissions: {}
 
 jobs:
+  test:
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+
+      - name: Install node dependencies
+        run: npm ci
+
+      - name: Lint
+        run: |
+          npm run test
+
   lint:
     runs-on: ubuntu-24.04
     steps:
@@ -23,7 +38,7 @@ jobs:
 
       - name: Lint
         run: |
-          npx eslint src
+          npm run lint
 
   format:
     runs-on: ubuntu-24.04
