--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
         "format": "npx prettier --write .",
-        "lint": "npx eslint"
+        "lint": "npx eslint",
+        "test": "vitest"
     },
     "engines": {
         "node": ">=20"
@@ -34,6 +35,7 @@
         "rollup": "^4.43.0",
         "tslib": "^2.8.1",
         "typescript": "^5.8.3",
-        "typescript-eslint": "^8.34.0"
+        "typescript-eslint": "^8.34.0",
+        "vitest": "^3.2.4"
     }
 }
