--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install node dependencies
         run: npm ci
 
-      - name: Lint
+      - name: Test
         run: |
           npm run test
 
