--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@rollup/plugin-typescript": "^12.1.2",
         "@types/node": "^20",
         "eslint": "^9.28.0",
+        "msw": "^2.10.2",
         "prettier": "^3.5.3",
         "rollup": "^4.43.0",
         "tslib": "^2.8.1",
